@@ -241,6 +241,7 @@ Version 1.5.2 - SVN
   - Let configtest.php use optional PEAR dynamic extension loading,
     patch by Walter Huijbers (#1833123).
   - Fix for IMAP servers that were having problems saving sent messages
+  - Added multiple select folder list option widgets (SMOPT_TYPE_FLDRLIST_MULTI).
 
 
 Version 1.5.1 (branched on 2006-02-12)
